<resources>
    <string name="app_name">Social Media App</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="video">Video</string>
    <string name="post">Post</string>

    <string name="chats">Chats</string>
    <string name="people">People</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="add_friend">Add Friend</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>


    <string name="see_original"><u>see original</u>.</string>



    <string name="on_num">One Number Needed at Least</string>
    <string name="min_password">Password should include 1Capital letter, 1 Number, and min 8 character, special character are not allowed</string>
    <string name="min_email">Email must be more than 14 character</string>
    <string name="min_name">Name must be more than 8 character</string>
    <string name="email_empty">Please , enter your email</string>
    <string name="email_invalid">Invalid email</string>
    <string name="name_invalid">Invalid name</string>
    <string name="password_empty">Please , enter your password</string>
    <string name="cap_letter">1 Capital letter Needed At Least</string>
    <string name="pass_charecters">Password must > 8 characters</string>
    <string name="pass_no_spec_charecters">Special characters are not allowed</string>
    <string name="default_web_client_id">605235966281-2gf8nkluqd27vvngje9is7cifv27ncru.apps.googleusercontent.com</string>
    <string name="hello_android">Hello Android!</string>

    <string name="max_temp">Max temp</string>
    <string name="feels_like">Feels like</string>
    <string name="min_temp">Min temp</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="location">Location</string>
    <string name="updated_at">updated at</string>
    <string name="_24_c">24°C</string>
    <string name="wind_velocity">Wind Velocity:</string>
    <string name="air_speed">Air Speed:</string>
    <string name="breeze_intensity">Breeze Intensity:</string>
    <string name="wind_rate">Wind Rate:</string>
    <string name="atmospheric_velocity">Atmospheric Velocity:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string translatable="false" name="depth_use_explanation">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string translatable="false" name="button_text_enable_depth">Enable</string>
    <string translatable="false" name="button_text_disable_depth">Disable</string>
    <string translatable="false" name="options_title_with_depth">Your device supports depth</string>
    <string translatable="false" name="options_title_without_depth">Your device does not support depth</string>
    <string translatable="false" name="done">Done</string>
    <string-array translatable="false" name="depth_options_array">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string translatable="false" name="options_title_instant_placement">Instant Placement options</string>
    <string-array translatable="false" name="instant_placement_options_array">
        <item>Enable Instant Placement</item>
    </string-array>

    <string translatable="false" name="searching_planes">Searching for surfaces...</string>
    <string translatable="false" name="waiting_taps">Tap on a surface to place an object.</string>
    <string name="welcome_to_agri_dorne_app">WELCOME TO AGRI DORNE APP:</string>
    <string name="emailPROFILE">Email:</string>
    <string name="home_bottom_nav">Home</string>
    <string name="profile_bottom_nav">Profile</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="_3_d_earth">3-D EARTH</string>
    <string name="agri_drone">AGRI DRONE</string>
    <string name="developers">Developers</string>


</resources>